--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles/normalize.css" />
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -15,7 +15,7 @@
         <div class="content-container">
           <div class="logo">
             <a href="/"
-              ><img src="/img/logo.png" alt="Puppytask logo" class="logo-img"
+              ><img src="./img/logo.png" alt="Puppytask logo" class="logo-img"
             /></a>
           </div>
           <div class="showcase-content">
@@ -26,14 +26,14 @@
             </p>
             <a href="/" class="cta showcase-cta">Get Started</a>
           </div>
-          <img src="/img/walk.png" alt="" class="showcase-img" />
+          <img src="./img/walk.png" alt="" class="showcase-img" />
         </div>
       </section>
       <section class="demo">
         <div class="content-container">
           <div class="demo-video">
             <video
-              src="img/video/add-schedule.mp4"
+              src="./img/video/add-schedule.mp4"
               preload="auto"
               autoplay="autoplay"
               loop="loop"
@@ -76,7 +76,7 @@
           <div class="card">
             <div class="card-animation">
               <video
-                src="/img/video/add-task.mp4"
+                src="./img/video/add-task.mp4"
                 preload="auto"
                 autoplay="autoplay"
                 loop="loop"
@@ -94,7 +94,7 @@
           <div class="card">
             <div class="card-animation">
               <video
-                src="/img/video/priortise.mp4"
+                src="./img/video/priortise.mp4"
                 preload="auto"
                 autoplay="autoplay"
                 loop="loop"
@@ -112,7 +112,7 @@
           <div class="card">
             <div class="card-animation">
               <video
-                src="/img/video/time-boxing.mp4"
+                src="./img/video/time-boxing.mp4"
                 preload="auto"
                 autoplay="autoplay"
                 loop="loop"
@@ -137,7 +137,7 @@
             <h3>Add members, add a schedule, and see who does&nbsp;what</h3>
             <div class="demo-video v2">
               <video
-                src="/img/video/puppy-manage.mp4"
+                src="./img/video/puppy-manage.mp4"
                 preload="auto"
                 autoplay="autoplay"
                 loop="loop"
@@ -148,7 +148,7 @@
             </div>
 
             <img
-              src="/img/alejandra.png"
+              src="./img/alejandra.png"
               alt="Alejandra, Co-Founder - Puppytask"
               class="portrait"
             />
@@ -178,7 +178,10 @@
           <div class="showcase-content">
             <div class="logo">
               <a href="/"
-                ><img src="/img/logo.png" alt="Puppytask logo" class="logo-img"
+                ><img
+                  src="./img/logo.png"
+                  alt="Puppytask logo"
+                  class="logo-img"
               /></a>
             </div>
             <a href="/" class="">support@puppytask.com</a>
@@ -189,6 +192,6 @@
         </div>
       </footer>
     </div>
-    <script src="/js/app.js" async defer></script>
+    <script src="./js/app.js" async defer></script>
   </body>
 </html>
